# bezier_solve

./: CMakeLists.txt  README.md  bezier_solve.cpp
